- Fixed addition of form fields. - Fixed horizontal lines that were not showing up. Files modified - [DynamicFieldService,pom.xml,app.css]

--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -1,3 +1,7 @@
+.wm-app hr {
+    border: solid 1px #999 !important;
+    /* Nein nein nein! */
+}
 .wm-app .app-header,
 .wm-app .app-mobile-header {
     background-color: rgba(230, 218, 218, 0.65);
